Add discussions. Add "user-helpme.html"

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Morgan Feeney",
   "license": "MIT",
   "devDependencies": {
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
     "autoprefixer": "^6.0.3",
     "bootstrap": "^4.0.0-alpha.2",
     "grunt": "^0.4.5",
