--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "author": "Morgan Feeney",
   "license": "MIT",
   "devDependencies": {
-    "jquery": "^3.2.1",
-    "popper.js": "^1.12.5",
     "autoprefixer": "^6.0.3",
     "bootstrap": "^4.0.0-alpha.2",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-nunjucks-2-html": "^1.0.4",
     "grunt-postcss": "^0.6.0",
     "grunt-prettify": "^0.4.0",
     "grunt-sass": "^1.2.0",
+    "jquery": "^3.2.1",
     "load-grunt-tasks": "^3.1.0",
+    "popper.js": "^1.12.5",
     "time-grunt": "^1.1.0"
   },
   "repository": {
@@ -39,5 +40,8 @@
     "html",
     "bootstrap",
     "nunjucks"
-  ]
+  ],
+  "dependencies": {
+    "normalize": "^0.3.1"
+  }
 }
